--- a/JUGILA/style.scss
+++ b/JUGILA/style.scss
@@ -1,4 +1,3 @@
-
 $xl: 1100px;
 $lg: 1200px;
 $md: 992px;
@@ -17,7 +16,7 @@ $yellow: #f5cd13;
 $red: #DB504A;
 $gray: #4F6D7A;
 $white: #FFFFFF;
-$black: #030306;
+$black: rgba(0,0,0,0.7);
 
 
 // $fancy-font: "Fascinate", system-ui;
@@ -42,14 +41,15 @@ body {
     background-image: url(Img/excavator_1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    
+    background-position: center;
+    background-attachment: fixed;
+
 }
 
 @media (max-width: 600px) {
     body {
         background-size: cover;
-        background-repeat: no-repeat;
-        
+        background-position: center;
     }
 }
 
@@ -83,9 +83,9 @@ header {
     height: $heder-height;
     display: flex;
     justify-content: center;
-    background-color: rgba(0, 0, 0, 0.800);
+    background-color: $black;
 
-    
+
     // animation: moveDown 500ms ease-in, fastUp 200ms linear 800ms;
 
     .menu {
@@ -100,7 +100,7 @@ header {
             display: flex;
             align-items: center;
             flex-direction: column;
-            
+
             .logo {
                 height: 200px;
                 width: 100%;
@@ -126,6 +126,52 @@ header {
                         color: $white;
                     }
                 }
+                .dropdown {
+                    float: left;
+                    overflow: hidden;
+                  }
+                  
+                  .dropdown .dropbtn {
+                    font-size: 16px;  
+                    border: none;
+                    outline: none;
+                    color: $yellow;
+                    padding: 0;
+                    background-color: inherit;
+                    font-family: inherit;
+                    margin: 0;
+                  }
+                  
+                  .navbar a:hover, .dropdown:hover .dropbtn {
+                    color: white;
+                  }
+                  
+                  .dropdown-content {
+                    display: none;
+                    position: absolute;
+                    background-color: rgba(0, 0, 0, 0.950);
+                    min-width: 160px;
+                    box-shadow: 0px 8px 16px 0px $black;
+                    z-index: 1;
+                    border-radius: 0 0 15px 15px;
+                  }
+                  
+                  .dropdown-content a {
+                    float: none;
+                    color: $yellow;
+                    padding: 12px 16px;
+                    text-decoration: none;
+                    display: block;
+                    text-align: left;
+                  }
+                  
+                  .dropdown-content a:hover {
+                    color: $white;
+                  }
+                  
+                  .dropdown:hover .dropdown-content {
+                    display: block;
+                  }
             }
         }
     }
@@ -148,7 +194,7 @@ header {
             position: absolute;
             bottom: 10px;
             background-color: $yellow;
-            transition: all 0.4s; 
+            transition: all 0.4s;
         }
 
         &::after {
@@ -168,7 +214,7 @@ header {
         display: none;
         position: absolute;
         z-index: 1000;
-        background-color: rgba(0, 0, 0, 0.800);
+        background-color: $black;
         width: 100%;
         right: 0;
         top: $heder-height;
@@ -179,31 +225,30 @@ header {
             display: flex;
             flex-direction: column;
             padding: $gap-max;
-            
-            li{
-            }
+
+            li {}
 
         }
     }
 
     input {
         display: none;
-    
-        &:checked + .burger {
+
+        &:checked+.burger {
             background-color: transparent;
-    
+
             &::before {
                 transform: rotate(45deg);
                 bottom: unset;
             }
-    
+
             &::after {
                 transform: rotate(-45deg);
                 top: unset;
             }
         }
-    
-        &:checked ~ .mobile-menu {
+
+        &:checked~.mobile-menu {
             transform: translate(0, 0);
         }
     }
@@ -231,11 +276,13 @@ header {
         opacity: 0;
         transform: translateY(-100%);
     }
+
     80% {
         opacity: 1;
         transform: translateY(20px);
 
     }
+
     100% {
         transform: translateY(0);
     }
@@ -264,46 +311,79 @@ main {
             max-width: $xl;
             padding: 0 $gap;
             gap: $gap;
-            // $blue: #084C61;
-            // $green: #56A3A6;
-            // $yellow: #f5cd13;
-            // $red: #DB504A;
-            // $gray: #4F6D7A;
-            // $white: #FFFFFF;
-            // $black: #030306;
+
 
             &__box {
-                background-color: rgba(0, 0, 0, 0.800);
+                background-color: $black;
                 color: $yellow;
                 width: 30%;
-                height: 300px;
+                height: auto;
                 gap: $gap;
                 border-radius: 15px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 0px 8px 16px 0px $black;
+                transition: all 0.3s ease;
                 text-align: center;
                 align-content: center;
-    
-            }
-            @media (max-width: 600px) {
-                body {
-                    background-repeat: no-repeat;
-                    background-size: contain;
-                    background-position: center;
-                
+
+                img {
+                    width: 100%;
+                    height: 55%;
+                    object-fit: cover;
+                    border-radius: 15px 15px 0 0;
+                    margin: 0;
+                    padding: 0;
                 }
-                &__box {
+
+                a {
+                    font-size: 1.2rem;
+                    color: $yellow;
+                }
+
+                button {
+                    background-color: $yellow;
+                    color: $black;
+                    border: none;
+                    padding: 10px 20px;
+                    margin-bottom: 10px;
+                    border-radius: 5px;
+                    cursor: pointer;
+                    font-size: 1rem;
+                    transition: all 0.3s ease;
+
+                    &:hover {
+                        background-color: darken($yellow, 10%);
+                    }
+                }
+
+            }
+
+            @media (max-width: 850px) {
+
+                .hero__bin__box {
                     width: 40%;
-                }   
+                }
+            }
+
+            @media (max-width: 600px) {
+                .hero__bin__box {
+                    width: 60%;
+                }
+
             }
 
             @media (max-width: 450px) {
-                &__box {
-                    width: 50%;
-                }   
+                .hero__bin__box {
+                    width: 80%;
+                }
             }
         }
-    } 
+    }
 
-    
+
 
 }
 
@@ -313,7 +393,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.800);
+    background-color: $black;
     color: $yellow;
 }
 
