--- a/JUGILA/style.scss
+++ b/JUGILA/style.scss
@@ -38,7 +38,7 @@ body {
     font-size: 16px;
     line-height: 1.2;
     color: $black;
-    background-image: url(Img/excavator_1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(Img/excavator_1.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
