--- a/Papildomai/006 floating background circles/style.scss
+++ b/Papildomai/006 floating background circles/style.scss
@@ -22,6 +22,7 @@ body, html{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #93d579;
 }
 
 .context h1{
@@ -31,7 +32,7 @@ body, html{
 }
 
 .area{
-    background: #4e54c8;  
+    background: #6bc348;  
     width: 100%;
     height:100%;
 }
@@ -51,7 +52,7 @@ body, html{
     list-style: none;
     width: 20px;
     height: 20px;
-    background: #ffffff33;
+    background: #36aa2ea5;
     animation: animate 25s linear infinite;
     bottom: -150px;
     
