--- a/Papildomai/005 sliding button animation/style.scss
+++ b/Papildomai/005 sliding button animation/style.scss
@@ -27,8 +27,8 @@ html, body{
     font-family: sans-serif;
     text-transform: uppercase;
     background: transparent;
-    color: #00abf0;
-    border: 2px solid #00abf0;
+    color: #40f000;
+    border: 2px solid #00f068;
     border-radius: 10px;
     cursor: pointer;
     transition: 0.5s;
@@ -36,7 +36,7 @@ html, body{
     overflow: hidden;
     z-index: 1;
 }
-
+//left btn
 .btn::before{
     content: '';
     position: absolute;
@@ -44,7 +44,7 @@ html, body{
     left: 0;
     width: 0;
     height: 100%;
-    background: #00abf0;
+    background: #e4f000;
     z-index: -1;
     transition: 0.5s;
 }
@@ -57,6 +57,7 @@ html, body{
     color: #081b29;
 }
 
+//right btn
 .btn:nth-child(2)::before{
     content: '';
     position: absolute;
@@ -64,8 +65,8 @@ html, body{
     left: 0;
     width: 100%;
     height: 0;
-    background: #00abf0;
-    transition: 0.5s;
+    background: #00f038;
+    transition: 1s;
     z-index: -1;
 }
 
