--- a/JUGILA/style.scss
+++ b/JUGILA/style.scss
@@ -84,6 +84,7 @@ header {
     display: flex;
     justify-content: center;
     background-color: rgb(0, 0, 0, 0.9);
+    position: relative;
 
 
     // animation: moveDown 500ms ease-in, fastUp 200ms linear 800ms;
@@ -266,6 +267,46 @@ header {
 
     }
 
+}
+
+header::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 4px;
+  background: linear-gradient(to right,
+      transparent 48.5%,
+      $yellow,
+      transparent 51.5%);
+  background-size: 200% 100%;
+  animation: borderFlow 1.5s cubic-bezier(0.4, 0, 0.2, 1) infinite alternate;
+}
+
+header::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background: linear-gradient(to right,
+  transparent 30%,
+  $yellow ,
+  transparent 70%);
+background-size: 200% 100%;
+  animation: borderFlow 2s cubic-bezier(0.4, 0, 0.2, 1) infinite alternate;
+}
+
+@keyframes borderFlow {
+  0% {
+    background-position: 0% 0;
+  }
+
+  100% {
+    background-position: 100% 0;
+  }
 }
 
 @keyframes moveDown {
